@@ -1,4 +1,3 @@
 <com:TContent ID="main">
 main content
-<com:TTextBox ID="TextBox" />
 </com:TContent>
