@@ -11,10 +11,12 @@ NEW: SQLMap (Wei)
 Version 3.0.0 May 1, 2006
 =========================
 BUG: Ticket#131 - TImageMap and TLinkButton continue to postback even client validator fails (Wei)
-BUT: Non-control components can now use expressions in their properties (Qiang)
+BUG: Ticket#135 - TBrowserLogRoute reports wrong timings (Qiang)
+BUG: Non-control components can now use expressions in their properties (Qiang)
 BUG: TControl.Visible did not make use of overriden getVisible() (Qiang)
 BUG: TWizard did not stop navigation upon a validation failure (Qiang)
 ENH: TButton, TImageButton and TLinkButton now implement IButtonControl interface (Qiang)
+ENH: TResponse::writeFile takes two additional parameters to allow sending memory data (Qiang)
 
 Version 3.0RC2 April 16, 2006
 =============================
